--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h2>About Us</h2>
                 <h3>Cass PTY/LTD</h3>
                 <p>
-                    <p>We Have Always prided ourselves in quality servicesand to this date, this keeps us going withsuch wide raech that goes beyond borders of Botswana. We Have a team of 3 mentors that are forever ready to assist in breeding quality traders within the circle & boundaries of Cass, hence the motto "if it ain't Cassanoified, it ain't Goat.</p>
+                    <p>We Have Always prided ourselves in quality services and to this date, this keeps us going with such wide reach that goes beyond borders of Botswana. We Have a team of 3 mentors that are forever ready to assist in breeding quality traders within the circle of Cass, hence the motto "if it ain't Cassanoified, it ain't Goat.</p>
                     <p>Our aim is to educate others about the foreign exchange market not only for them to become independent traders but as well as to gain their financial freedom and grow to a point where they are able to share their knewly found knowledge with people around them.</p>
                      </p>
                  <a href="#">Learn More</a>
