--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cass</title>
+        <script src="https://kit.fontawesome.com/8fc0383455.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap">
         <link rel="stylesheet" href="style.css"
     </head>
@@ -10,8 +11,7 @@
     <div class="header">
         <div class="col-1">
             <div class="nav">
-                <img src="background.jpg" class="logo">
-                <img src="search.png" class="lsearch-icon">
+                <img src="" class="logo">
             </div>
             <div class="left-text">
                 <h1>LET US HELP YOU <br>WITH YOUR TRADING</h1>
@@ -23,27 +23,22 @@
         </div>
         <div class="col-2">
             <div class="class">
-            <div class="header-btns">
-                <a href="index.html" class="header-btn">Home</a>
-                <a href="https://wa.me/message/U5WMALPD2A52N1" class="header-btn">Whatsapp</a>
-            </div>
+                <div class="nav">
+                    <img src="background.jpg" class="logo">
+                </div>
             </div>
                
             <div class="right-text">
                 <h2>About Us</h2>
                 <h3>Cass PTY/LTD</h3>
                 <p>
-                    <p>We Have Always prided ourselves in quality services and to this date, this keeps us going with such wide reach that goes beyond borders of Botswana. We Have a team of 3 mentors that are forever ready to assist in breeding quality traders within the circle of Cass, hence the motto "if it ain't Cassanoified, it ain't Goat.</p>
+                    <p>We Have Always prided ourselves in quality servicesand to this date, this keeps us going withsuch wide raech that goes beyond borders of Botswana. We Have a team of 3 mentors that are forever ready to assist in breeding quality traders within the circle & boundaries of Cass, hence the motto "if it ain't Cassanoified, it ain't Goat.</p>
                     <p>Our aim is to educate others about the foreign exchange market not only for them to become independent traders but as well as to gain their financial freedom and grow to a point where they are able to share their knewly found knowledge with people around them.</p>
                      </p>
-                 <a href="#">Learn More</a>
+                 <a href="https://wa.me/message/U5WMALPD2A52N1">Learn More</a>
             </div>
         </div>
     </div>
-    <ul class="sci">
-        <li><a href="https://www.facebook.com/cassfx/"><img src="facebook.png"></a></li>
-        <li><a href="https://www.instagram.com/invites/contact/?i=5e4owialbkgr&utm_content=4dts9dw"><img src="instagram.png"></a></li>
-    </ul>
     <div class="service">
 		<div class="title">
 			<h2>Our Services</h2>
@@ -57,7 +52,7 @@
 					<p>Our mentorship clients/students are subject to a 24/7 line of service that is reliable to help them solve any mishaps that they may incure during their trading journey.</p>
 
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href="https://wa.me/message/U5WMALPD2A52N1">ENROLL NOW</a>
 					</p>
 				</div>
 			</div>
@@ -76,7 +71,7 @@
                 </ul>
 
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href="https://wa.me/message/U5WMALPD2A52N1">ENROLL NOW</a>
 					</p>
 				</div>
 			</div>
@@ -92,11 +87,26 @@
                     </ul>
 
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href="https://wa.me/message/U5WMALPD2A52N1">ENROLL NOW</a>
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
+
+    <footer>
+		<p>CASS PTY/LTD</p>
+		<p>For more information please contact us on any of our social platforms below.</p>
+		<div class="social">
+			<a href="https://www.facebook.com/cassfx/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://vm.tiktok.com/ZMLWVRpna/"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://www.instagram.com/atang_cass/?fbclid=IwAR1dho2NpcIHY3REp5b_c6GoOMrTLns00crgVMNj2rRE-VUEBnaUGLQ1RcY"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/message/U5WMALPD2A52N1"><i class="fa-brands fa-whatsapp"></i></a>
+		</div>
+        
+		<p class="end">ALL RIGHTS RESERVED</p>
+	</footer>
+  
+  
 </body>
 </html>
